--- a/BlazorKeyVaultDemo/Components/Pages/Home.razor
+++ b/BlazorKeyVaultDemo/Components/Pages/Home.razor
@@ -1,7 +1,12 @@
-﻿@page "/"
+﻿
+@page "/"
+@using Microsoft.AspNetCore.Components.Authorization
 
-<PageTitle>Home</PageTitle>
-
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+    <AuthorizeView>
+        <Authorized>
+            Hello, @context.User.Identity.Name!
+        </Authorized>
+        <NotAuthorized>
+            You are not logged in.
+        </NotAuthorized>
+    </AuthorizeView>
