Implement azuure AD login for web assembly project

--- a/BlazorWasmAppAzureAdLogin/_Imports.razor
+++ b/BlazorWasmAppAzureAdLogin/_Imports.razor
@@ -9,3 +9,5 @@
 @using Microsoft.JSInterop
 @using BlazorWasmAppAzureAdLogin
 @using BlazorWasmAppAzureAdLogin.Layout
+@using Microsoft.AspNetCore.Authorization
+
