--- a/BlazorWasmAppAzureAdLogin/_Imports.razor
+++ b/BlazorWasmAppAzureAdLogin/_Imports.razor
@@ -10,4 +10,13 @@
 @using BlazorWasmAppAzureAdLogin
 @using BlazorWasmAppAzureAdLogin.Layout
 @using Microsoft.AspNetCore.Authorization
+@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using System.Net.Http.Headers
+@using BlazorWasmAppAzureAdLogin.Models;
+@using BlazorWasmAppAzureAdLogin.Services
+@using BlazorWasmAppAzureAdLogin.Pages
+
+
+
+
 
