--- a/BlazorWasmAppAzureAdLogin/Layout/NavMenu.razor
+++ b/BlazorWasmAppAzureAdLogin/Layout/NavMenu.razor
@@ -24,6 +24,31 @@
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather
             </NavLink>
         </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="weatherforecast">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather Forecast
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="gettoken">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Token Page
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="admin">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Admin Page
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="user">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> User age
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="commonpage">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Common Page
+            </NavLink>
+        </div>
     </nav>
 </div>
 
