--- a/BlazorWasmAppAzureAdLogin/Pages/WeatheRreport.razor
+++ b/BlazorWasmAppAzureAdLogin/Pages/WeatheRreport.razor
@@ -1,12 +1,9 @@
-﻿@page "/weather"
-@inject HttpClient Http
-@inject IAccessTokenProvider TokenProvider
-@inject NavigationManager Navigation
+﻿@page "/weatherreport"
 
 @attribute [Authorize]
+@using BlazorWasmAppAzureAdLogin.Models
+@inject IApiService ApiService
 
-
-<PageTitle>Weather</PageTitle>
 
 <h1>Weather</h1>
 
@@ -46,21 +43,7 @@ else
 
     protected override async Task OnInitializedAsync()
     {
-        var tokenResult = await TokenProvider.RequestAccessToken();
-
-        if (tokenResult.TryGetToken(out var token))
-        {
-            Http.DefaultRequestHeaders.Authorization = new AuthenticationHeaderValue("Bearer", token.Value);
-            forecasts = await Http.GetFromJsonAsync<BlazorWasmAppAzureAdLogin.Models.WeatherForecast[]>("https://localhost:7168/WeatherForecast");
-        }
-        else
-        {
-            // Handle no token
-            // Token could not be acquired silently
-            // Usually means the user needs to reauthenticate
-            Navigation.NavigateTo("authentication/login");
-        }
-       // forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("sample-data/weather.json");
+        forecasts = await ApiService.GetAsync<BlazorWasmAppAzureAdLogin.Models.WeatherForecast[]>("https://localhost:7168/WeatherForecast");
+        StateHasChanged();
     }
-
 }
