--- a/BlazorWasmAppAzureAdLogin/Layout/NavMenu.razor
+++ b/BlazorWasmAppAzureAdLogin/Layout/NavMenu.razor
@@ -30,6 +30,11 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
+            <NavLink class="nav-link" href="weatherreport">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Weather Report
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
             <NavLink class="nav-link" href="gettoken">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Token Page
             </NavLink>
@@ -47,6 +52,32 @@
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="commonpage">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Common Page
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="userinfo">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> User Info
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="tokeninfodisplay">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> token info display
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="idtoken">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Get Id token
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="access-token-display">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> access-token-display
+            </NavLink>
+        </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="idtokencountdown">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> idtokencountdown
             </NavLink>
         </div>
     </nav>
