--- a/BlazorWasmAppAzureAdLogin/Pages/AdminPage.razor
+++ b/BlazorWasmAppAzureAdLogin/Pages/AdminPage.razor
@@ -2,9 +2,26 @@
 
 @attribute [Authorize(Roles ="Admin")]
 
-
 <h3>Admin Page</h3>
 <p>This page is accessed only when user has admin role</p>
+
+
+<AuthorizeView>
+    <Authorized>
+        <h2>Your identity name: @context.User.Identity.Name</h2>
+        <h4>Claims:</h4>
+        <ul>
+            @foreach (var claim in context.User.Claims)
+            {
+                <li><b>@claim.Type</b>: @claim.Value</li>
+            }
+        </ul>
+    </Authorized>
+    <NotAuthorized>
+        <p>I'm sorry, I can't display anything until you log in</p>
+    </NotAuthorized>
+</AuthorizeView>
+
 @code {
 
 }
