--- a/BlazorAzureAdLogin/Components/Layout/NavMenu.razor
+++ b/BlazorAzureAdLogin/Components/Layout/NavMenu.razor
@@ -45,13 +45,13 @@
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="admin">
+            <NavLink class="nav-link" href="adminpage">
                 <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> Admin Page
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="user">
-                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> User age
+            <NavLink class="nav-link" href="userpage">
+                <span class="bi bi-list-nested-nav-menu" aria-hidden="true"></span> User page
             </NavLink>
         </div>
         <div class="nav-item px-3">
