Implement AD Login redirect

--- a/BlazorWasmClient/Pages/RedirectToLogin.razor
+++ b/BlazorWasmClient/Pages/RedirectToLogin.razor
@@ -1,25 +1,9 @@
-﻿@inject NavigationManager Navigation
-@* @inject AuthenticationStateProvider AuthenticationStateProvider *@
+﻿@using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@inject NavigationManager Navigation
 
 @code {
-    [CascadingParameter]
-    private Task<AuthenticationState> AuthenticationStateTask { get; set; } = default!;
-
-    protected override async Task OnInitializedAsync()
+    protected override void OnInitialized()
     {
-        var authState = await AuthenticationStateTask;
-        if (authState.User.Identity is null || !authState.User.Identity.IsAuthenticated)
-        {
-            var returnUrl = Navigation.ToBaseRelativePath(Navigation.Uri);
-            Navigation.NavigateTo($"authentication/login?returnUrl={returnUrl}", true);
-        }
-
-        // var authState = await AuthenticationStateProvider.GetAuthenticationStateAsync();
-        // var user = authState.User;
-        // if (authState.User.Identity is null || !authState.User.Identity.IsAuthenticated)
-        // {
-        //     var returnUrl = Navigation.ToBaseRelativePath(Navigation.Uri);
-        //     Navigation.NavigateTo($"authentication/login?returnUrl={returnUrl}", true);
-        // }
+        Navigation.NavigateToLogin("authentication/login");
     }
 }
